--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@oclif/config": "^1",
     "@oclif/errors": "^1.3.4",
     "@oclif/plugin-help": "^3",
+    "@octokit/request": "^5.4.14",
     "@types/inquirer": "^7.3.1",
     "@types/minimist": "^1.2.1",
     "@types/which": "^2.0.0",
-    "delay": "^5.0.0",
+    "cli-ux": "^5.5.1",
+    "collect.js": "^4.28.6",
     "enquirer": "^2.3.6",
     "execa": "^5.0.0",
-    "inquirer": "^8.0.0",
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
     "tslib": "^1",
