--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@oclif/errors": "^1.3.4",
     "@oclif/plugin-help": "^3",
     "@octokit/request": "^5.4.14",
+    "@types/fs-extra": "^9.0.8",
     "@types/inquirer": "^7.3.1",
     "@types/minimist": "^1.2.1",
     "@types/which": "^2.0.0",
+    "chalk": "^4.1.0",
     "cli-ux": "^5.5.1",
     "collect.js": "^4.28.6",
     "enquirer": "^2.3.6",
     "execa": "^5.0.0",
+    "fs-extra": "^9.1.0",
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
+    "moment": "^2.29.1",
+    "platform-folders": "^0.5.2",
     "tslib": "^1",
     "which": "^2.0.2"
   },
