--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
-    "platform-folders": "^0.5.2",
     "tslib": "^1",
-    "which": "^2.0.2"
+    "which": "^2.0.2",
+    "xdg-app-paths": "^7.3.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
