--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
     "@oclif/errors": "^1.3.4",
     "@oclif/plugin-help": "^3",
     "@octokit/request": "^5.4.14",
-    "@types/fs-extra": "^9.0.8",
-    "@types/inquirer": "^7.3.1",
-    "@types/minimist": "^1.2.1",
-    "@types/which": "^2.0.0",
     "chalk": "^4.1.0",
     "cli-ux": "^5.5.1",
     "collect.js": "^4.28.6",
     "enquirer": "^2.3.6",
+    "envfile": "^6.14.0",
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "tslib": "^1",
+    "validator": "^13.5.2",
     "which": "^2.0.2",
     "xdg-app-paths": "^7.3.0"
   },
@@ -34,8 +32,13 @@
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "@types/chai": "^4",
+    "@types/fs-extra": "^9.0.8",
+    "@types/inquirer": "^7.3.1",
+    "@types/minimist": "^1.2.1",
     "@types/mocha": "^5",
     "@types/node": "^14.14.31",
+    "@types/validator": "^13.1.3",
+    "@types/which": "^2.0.0",
     "chai": "^4",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
