--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/errors": "^1.3.4",
+    "@oclif/plugin-autocomplete": "^0.3.0",
     "@oclif/plugin-help": "^3",
     "@octokit/request": "^5.4.14",
     "chalk": "^4.1.0",
@@ -19,6 +20,7 @@
     "enquirer": "^2.3.6",
     "envfile": "^6.14.0",
     "execa": "^5.0.0",
+    "figures": "^3.2.0",
     "fs-extra": "^9.1.0",
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
@@ -68,7 +70,8 @@
     "commands": "./lib/commands",
     "bin": "ezgames",
     "plugins": [
-      "@oclif/plugin-help"
+      "@oclif/plugin-help",
+      "@oclif/plugin-autocomplete"
     ]
   },
   "repository": "ezmodyz/ezgames-cli",
