moved keygen & magration to containers && Added waitForHealthyApp helper

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@oclif/plugin-autocomplete": "^0.3.0",
     "@oclif/plugin-help": "^3",
     "@octokit/request": "^5.4.14",
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
+    "cli-table": "^0.3.6",
     "cli-ux": "^5.5.1",
     "collect.js": "^4.28.6",
     "enquirer": "^2.3.6",
@@ -25,6 +27,7 @@
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
+    "retry-axios": "^2.4.0",
     "tslib": "^1",
     "validator": "^13.5.2",
     "which": "^2.0.2",
@@ -34,6 +37,7 @@
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "@types/chai": "^4",
+    "@types/cli-table": "^0.3.0",
     "@types/fs-extra": "^9.0.8",
     "@types/inquirer": "^7.3.1",
     "@types/minimist": "^1.2.1",
