--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,7 @@ extends:
     - oclif
     - oclif-typescript
 rules: {
+  'unicorn/prefer-type-error',
   'import/no-extraneous-dependencies': 'off',
   'import/extensions': 'off',
   'no-console': 'off',
