--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "listr2": "^3.4.1",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
+    "node-notifier": "^9.0.1",
     "retry-axios": "^2.4.0",
     "tslib": "^1",
     "validator": "^13.5.2",
@@ -43,6 +44,7 @@
     "@types/minimist": "^1.2.1",
     "@types/mocha": "^5",
     "@types/node": "^14.14.31",
+    "@types/node-notifier": "^8.0.0",
     "@types/validator": "^13.1.3",
     "@types/which": "^2.0.0",
     "chai": "^4",
