--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.1",
     "node-notifier": "^9.0.1",
     "retry-axios": "^2.4.0",
+    "semver": "^7.3.4",
     "simple-git": "^2.38.1",
     "tslib": "^1",
     "validator": "^13.5.2",
@@ -46,6 +47,7 @@
     "@types/mocha": "^5",
     "@types/node": "^14.14.31",
     "@types/node-notifier": "^8.0.0",
+    "@types/semver": "^7.3.5",
     "@types/validator": "^13.1.3",
     "@types/which": "^2.0.0",
     "chai": "^4",
