--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ezgames-cli",
   "description": "EZGames CLI Toolkit",
-  "version": "0.0.7",
+  "version": "0.0.8-alpha.1",
   "author": "Saber Nouira @iWirk",
   "bin": {
     "ezgames": "./bin/run"
   },
   "bugs": "https://github.com/ezmodyz/ezgames-cli/issues",
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.4",
+    "@grpc/grpc-js": "^1.3.7",
     "@grpc/proto-loader": "^0.6.3",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
@@ -46,6 +46,7 @@
     "@types/chai": "^4",
     "@types/cli-table": "^0.3.0",
     "@types/fs-extra": "^9.0.8",
+    "@types/google-protobuf": "^3.15.5",
     "@types/inquirer": "^7.3.1",
     "@types/minimist": "^1.2.1",
     "@types/mocha": "^5",
@@ -60,9 +61,12 @@
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "globby": "^10",
+    "grpc-tools": "^1.11.2",
+    "grpc_tools_node_protoc_ts": "^5.3.1",
     "mocha": "^5",
     "nyc": "^14",
     "ts-node": "^8",
+    "ts-proto": "^1.82.5",
     "typescript": "^3.3"
   },
   "engines": {
@@ -105,7 +109,8 @@
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md",
-    "build": "oclif-dev pack --xz"
+    "build": "oclif-dev pack --xz",
+    "bridge-build": "sh src/core/bridge/build_protos.sh"
   },
   "types": "lib/index.d.ts"
 }
