--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "@types/which": "^2.0.0",
     "aws-sdk": "^2.927.0",
     "chai": "^4",
-    "eslint": "^5.13",
-    "eslint-config-oclif": "^3.1",
-    "eslint-config-oclif-typescript": "^0.1",
+    "eslint": "^7.32",
+    "eslint-config-oclif": "^4.0.0",
+    "eslint-config-oclif-typescript": "^1.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "globby": "^10",
     "grpc-tools": "^1.11.2",
     "grpc_tools_node_protoc_ts": "^5.3.1",
