testing empty grpc requests

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,8 +16,8 @@ rules: {
   '@typescript-eslint/no-this-alias': 'off',
   'no-warning-comments': 'off',
   'unicorn/no-abusive-eslint-disable': 'off',
-  'default-param-last': 'off'
-  '@typescript-eslint/ban-ts-comment': 'off',
+  'default-param-last': 'off',
+  '@typescript-eslint/ban-ts-comment': 'off'
 }
 settings:
   import/resolver:
